back end categories

--- a/.env.example
+++ b/.env.example
@@ -22,14 +22,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_HOST=smtp.sendgrid.net
 MAIL_DRIVER=smtp
-MAIL_FROM=info@6circlesapp.com
-MAIL_FROM_NAME="news-Gateway team"
-MAIL_PORT=587
-MAIL_USERNAME=apikey
-MAIL_PASSWORD=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
-MAIL_ENCRYPTION=tls
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=2ebdacb17cee83
+MAIL_PASSWORD=76671dcb8dcb57
+MAIL_ENCRYPTION=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
