--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,5 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+YOUTUBE_API_KEY='AIzaSyAmTRiu8S38eKazaB43rDf-fLyd0WMG3a0'
